<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.RegistrationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Reg_UserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/enter_a_username" />

        <EditText
            android:id="@+id/Reg_SName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/enter_your_name" />

        <EditText
            android:id="@+id/Reg_DoB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:focusable="false"
            android:hint="@string/enter_your_DoB" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="10sp" />

        <TextView
            android:id="@+id/Reg_Major_Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_major"
            android:textAppearance="?android:textAppearanceMedium" />

        <ListView
            android:id="@+id/Reg_MajorList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/Reg_Email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/enter_your_msu_email"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/Reg_pass1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/enter_your_password" />

        <EditText
            android:id="@+id/Reg_pass2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/confirm_password" />

        <Button
            android:id="@+id/btn_Reg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0FFF"
            android:onClick="register"
            android:text="@string/btn_register" />
    </LinearLayout>
</ScrollView>
