<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.MainActivity">

    <ImageView
        android:layout_width="177dp"
        android:layout_height="177dp"
        android:background="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:fontFamily="@string/abc_capital_on"
        android:text="@string/welcome_to_msu"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#009900"
        android:typeface="monospace" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/text_name_MA_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_MA"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_name_MA1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_name_MA_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_MA"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_name_MA2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_1234_MA"
            android:inputType="textPassword" />
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_forget_password_MA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#0FFF"
            android:text="@string/btn_forgot_password"
            android:textSize="10dp" />

        <Button
            android:id="@+id/btn_register_MA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#0FFF"
            android:text="@string/btn_register"
            android:textSize="10dp" />
    </LinearLayout>

</LinearLayout>
