<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.ForgetPassword">

    <ImageView
        android:layout_width="177dp"
        android:layout_height="177dp"
        android:background="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_forgot"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20sp" />

    <EditText
        android:id="@+id/editText_username_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_username" />

    <EditText
        android:id="@+id/editText_email_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_msu_email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30sp" />

    <Button
        android:id="@+id/btn_send_forgot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0FFF"
        android:text="@string/btn_send_forgot"
        android:textSize="20sp" />
</LinearLayout>
